--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>luka smells</title>
+    <title>Simple JS Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
