--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="script.js" defer></script>
+     <script src="https://long-cat-cursor.glitch.me/script.js" defer></script>
   </head>  
   <body>
     <h1>luka loves cats</h1>
